# getnews

./: .dockerignore  .env.docker.template  .env.template  .gitignore  .railway-volumes-guide.md  .railwayignore  AGENTS.md  DEPLOYMENT_CHECKLIST.md  DOCKER.md  Dockerfile  RAILWAY_DEPLOYMENT.md  RAILWAY_DOCKER_NOTES.md  README.md  config.json  config.jsonc  debug_rss.py  docker-build.sh  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.py  pyproject.toml  railway.toml  requirements.txt  run.py  test_market_snapshot_live.py
.sisyphus/: boulder.json
crypto_news_analyzer/: __init__.py  api_server.py  datasource_payloads.py  execution_coordinator.py  main.py  models.py
docs/: AI_ANALYZE_API_GUIDE.md  ARCHITECTURE_BOUNDARIES.md  FINAL_SUMMARY.md  HIDDEN_CHANNEL_INTELLIGENCE_DEPLOY.md  HIDDEN_CHANNEL_INTELLIGENCE_REVIEW.md  INTELLIGENCE_TOPIC_PLAN.md  LLM_PROVIDER_REFERENCE.md  RAILWAY_DEPLOYMENT.md  SEMANTIC_SEARCH_API_GUIDE.md  TELEGRAM_COMMANDS.md  TOPIC_LIFECYCLE.md  VOLATILITY_DETECTOR_SUMMARY.md  dynamic_classification_manager.md  llm_analyzer.md  project_status.md  railway-volumes-guide.md  structured_output_manager.md  timezone_implementation.md  volatility_detector_design.md
examples/: report_generation_example.py  structured_output_example.py  token_usage_example.py
live_tests/: test_x_crawler_live.py
prompts/: analysis_prompt.json  analysis_prompt.md  intelligence_extraction_prompt.md  market_summary_prompt.md  semantic_search_query_planner.md  semantic_search_report.md  topic_convergence_prompt.md  topic_enrichment_prompt.md  topic_findings_merge_prompt.md  topic_research_prompt.md  (+3 more)
(+632 files in other folders)
